--- a/src/components/topBar/style.scss
+++ b/src/components/topBar/style.scss
@@ -12,7 +12,20 @@
     color: white;
     padding: 0 15px;
     cursor: pointer;
+    text-align: center;
   }
   .spamHeader:hover {
     color: #9834e5;
+  }
+  @media only screen and (max-width: 780px) {
+    .spamHeader {
+      font-family: "Montserrat", "sans-serif";
+      font-size: 18px;
+      font-style: italic;
+      font-weight: 600;
+      color: white;
+      padding: 0 5px;
+      cursor: pointer;
+      text-align: center;
+    }
   }
